comment marche et accueil footer

--- a/index.html
+++ b/index.html
@@ -10,16 +10,119 @@
     <!-- Header -->
     <header>
         <nav>
-            <div class="logo">TeamUp.gg</div>
+            <div class="logo">TeamUp<span>.gg</span></div>
             <ul class="nav-links">
                 <li><a href="#">Accueil</a></li>
                 <li><a href="#">Comment ça marche</a></li>
                 <li><a href="#">Joueurs</a></li>
                 <li><a href="#">Communauté</a></li>
+                <a href="#"><button>Connexion</button></a>
             </ul>
-            <a href="Accueil.html"><button>Connexion</button></a>
         </nav>
     </header>
+    <!-- page 1 -->
+     <section id="accueil" class="accu">
+         <div class="accu-content">
+            <h1>Trouve ton équipe.
+                 <pre>  Domine le jeu</pre>
+            </h1>
+            <p>Rejoins la plus grande communauté E-sport et connecte-toi avec des joueurs de ton
+            <pre class="pre">                  niveau sur Valorant,LoL,CS2 et plus encore.</pre>
+            </p>
+            <div class="accu-buttom">
+                 <a href="#" class="commencer"><button>Commencer maintenant</button></a>
+                 <a href="#"  class="en-savoir"><button>En savoir plus</button></a>
+            </div>
+         </div>
+         </section>
+
+
+     <!-- Comment ça marche -->
+    <section class="comment-marche">
+        <div class="h2">
+            <h2>Comment ça marche</h2>
+        </div>
+        
+        <div class="comment">
+            <article class="trouve">
+                <div class="logo1">
+                  <i class=""></i><!-- logo1 -->
+                </div>
+                <div>
+                    <h5>Trouve une équipe</h5>
+                    <p>parcours des centaire de profils de</p>
+                    <p>joueurs et d'équipes qui cherchent des</p>
+                    <p>coéquipiers de ton niveu.</p>
+                </div>
+            </article>
+             <article class="publie">
+                <div class="logo2">
+                  <i class=""></i><!-- logo2 -->
+                </div>
+                <div>
+                    <h5> publie ton profil</h5>
+                    <p>Crée ton profil de joueur avec tes stats,</p>
+                    <p>tes jeux favoris et ton niveau pour étre</p>
+                    <p>visible par les équipes.</p>
+                </div>
+            </article>
+            <article class="rejoins">
+                <div class="logo3">
+                  <i class=""></i><!-- logo3 -->
+                </div>
+                <div>
+                    <h5>  Rejoins la communauté</h5>
+                    <p>Connecte-toi avec des milliers de</p>
+                    <p>joueurs passionnés et participe à</p>
+                    <p>tournois communautaires.</p>
+                </div>
+            </article>
+        
+        </div>
+    </section>
+
+
+     <!-- Footer -->
+         <hr>
+      <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>TeamUp<span>.gg</span></h4>
+                <p>la plateforme E-sport qui connecte</p>
+                <p>les joueurs et les équipe du</p>
+                <p>monde entier.</p>
+            </div>
+            <div class="footer-section">
+                 <h4>Plateforme</h4>
+                <ul> 
+                 <li><a href="#">trouver une équipe</a></li>
+                 <li><a href="#">créer un profil</a></li>
+                 <li><a href="#">Tournois</a></li>
+                 <li><a href="#">Classements</a></li>
+                </ul>   
+            </div>
+            <div class="footer-section">
+                <h4>Jeux</h4>
+                <ul>
+                    <li><a href="#">Valorent</a></li>
+                    <li><a href="#">League of legends</a></li>
+                    <li><a href="#">Counter-Strick</a></li>
+                    <li><a href="#">Overwatch 2</a></ili>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Support</h4>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Conditions d'utilisation</a></li>
+                    <li><a href="#">Politique de confidentialité</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+        </div>
+      </footer>
+
 
 </body>
 </html>
