--- a/communauté.html
+++ b/communauté.html
@@ -24,21 +24,66 @@
             </ul>
         </nav>
     </header>
-    <!-- accueil -->
-     <section id="accueil" class="accu">
-         <div class="accu-content">
-            <h1>Trouve ton équipe.
-                 <pre>  Domine le jeu</pre>
-            </h1>
-            <p>Rejoins la plus grande communauté E-sport et connecte-toi avec des joueurs de ton
-            <pre class="pre">                  niveau sur Valorant,LoL,CS2 et plus encore.</pre>
-            </p>
-            <div class="accu-buttom">
-                 <a href="comment.html" class="commencer"><button>Commencer maintenant</button></a>
-                 <a href="joueurs.html"  class="en-savoir"><button>En savoir plus</button></a>
-            </div>
-         </div>
-         </section>
+    
+     <!-- communauté en pleine  -->
+      <section class="communauté">
+        <div class="cummunaute-titele">
+          <h2>Une communauté en pleine croissance</h2>
+        </div>
+        <div class="communaute-items">
+          <div class="joueurs-actifs communaute-items-border">
+             <h2 class="communaute-number">15,000+</h2>
+             <p>Joueurs actifs</p>
+          </div>
+          <div class="equipes-formees communaute-items-border">
+              <h2 class="communaute-number">2,500+</h2>
+              <p>Equipes formées</p>
+          </div>
+          <div class="tournois communaute-items-border">
+               <h2 class="communaute-number">50+</h2>
+               <p>Tournois</p>
+          </div>
+          <div class="jeux-supportes communaute-items-border">
+            <h2 class="communaute-number">10+</h2>
+            <p>Jeux supportés</p>
+          </div>
+        </div>
+      </section>
+      <!-- Ce qu'ils disent de nous  -->
+    <section class="comment-marche">
+        <div class="comment-marche_title">
+            <h2>Ce qu'ils disent de nous</h2>
+        </div>
+
+        <div class="comment">
+            <article class="tout-comment">
+                <div class="comment-text">
+                    <h5>Trouve une équipe</h5>
+                    <p>parcours des centaire de profils de</p>
+                    <p>joueurs et d'équipes qui cherchent des</p>
+                    <p>coéquipiers de ton niveu.</p>
+                </div>
+            </article>
+             <article class="tout-comment">
+                <div class="comment-text">
+                    <h5> publie ton profil</h5>
+                    <p>Crée ton profil de joueur avec tes stats,</p>
+                    <p>tes jeux favoris et ton niveau pour étre</p>
+                    <p>visible par les équipes.</p>
+                </div>
+            </article>
+            <article class="tout-comment">
+                <div class="comment-text">
+                    <h5>  Rejoins la communauté</h5>
+                    <p>Connecte-toi avec des milliers de</p>
+                    <p>joueurs passionnés et participe à</p>
+                    <p>tournois communautaires.</p>
+                </div>
+            </article>
+        
+        </div>
+    </section>
+
 
      <!-- Footer -->
          <hr>
