fille profils, annonce et des modification

--- a/joueurs.html
+++ b/joueurs.html
@@ -17,6 +17,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="comment.html">Comment ça marche</a></li>
+                <li><a href="profiles.html">profils</a></li>
                 <li><a href="joueurs.html">Joueurs</a></li>
                 <li><a href="annonce.html">Annonce</a></li>
                 <li><a href="communauté.html">Communauté</a></li>
@@ -65,7 +66,7 @@
                 <p class="para-xfawzer">Main Clove/Omen, cherche équipe compétitive
                   <pre class="pre">    pour ranked push</pre>
                 </p>
-                <button>Voir le profil</button>
+                <a href="profiles.html"></a><button>Voir le profil</button>
               </div>
             </div>
 
