--- a/annonce.html
+++ b/annonce.html
@@ -17,6 +17,7 @@
         <ul class="nav-links">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="comment.html">Comment ça marche</a></li>
+          <li><a href="profiles.html">profils</a></li>
           <li><a href="joueurs.html">Joueurs</a></li>
           <li><a href="annonce.html">Annonce</a></li>
           <li><a href="communauté.html">Communauté</a></li>
@@ -25,34 +26,44 @@
       </nav>
     </header>
     <!-- Annonce -->
-    <section class="annonce">
-      <div class="annonce-titele">
-        <h2>Annonce De Recrutement</h2>
-      </div>
-
-      <form class="annonce-items">
-        <label for="equipe">name équipe</label>
+    <section class="annonce"> 
+     <div class="annonce-content">
+        <div>
+        <h2 class="annonce-titele">Annonce De Recrutement</h2>
+        <img src="cover.png" class="image-annonce">
+        </div>
+       <form class="annonce-items">
+        <div>
+        <label for="equipe">Name Equipe</label>
         <br/>
         <input id="equipe" type="text" placeholder="nom de équipe" name="equipe" required />
-        <br/>
+        </div>
+        <div>
+        <div class="possition-label_right">
         <label for="jeux">Jeux</label>
-        <br/>
+        </div>
         <input id="jeux" type="text" placeholder="Jeux" name="jeux" required />
-        <br/>
+        </div>
+        <div>
+        <div class="possition-label-Niveaux_right">
         <label for="niveau">Niveaux</label>
-        <br/>
+        </div>
         <input type="text" placeholder="Niveaux" name="Niveaux" required />
-        <br />
+        </div>
+        <div>
+        <div class="possition-label_right">
         <label for="role">Role</label>
-        <br/>
+        </div>
         <input type="text" placeholder="Role on équipe" required name="role" />
-        <br/>
+        </div>
+        <div>
         <label for="discription">Discription</label>
         <br/>
-        <textarea id="discription" name="discription" placeholder="Discription de annonce" required></textarea>
-        <br/>
+        <textarea id="discription" name="discription" placeholder="Discription de annonce"  required></textarea>
+        </div>
         <button>Partage</button>
-      </form>
+       </form>
+     </div>
     </section>
     <!-- Footer -->
      <hr>
