--- a/comment.html
+++ b/comment.html
@@ -23,6 +23,7 @@
         <ul class="nav-links">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="comment.html">Comment ça marche</a></li>
+          <li><a href="profiles.html">profils</a></li>
           <li><a href="joueurs.html">Joueurs</a></li>
           <li><a href="annonce.html">Annonce</a></li>
           <li><a href="communauté.html">Communauté</a></li>
