--- a/communauté.html
+++ b/communauté.html
@@ -17,6 +17,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="comment.html">Comment ça marche</a></li>
+                <li><a href="profiles.html">profils</a></li>
                 <li><a href="joueurs.html">Joueurs</a></li>
                 <li><a href="annonce.html">Annonce</a></li>
                 <li><a href="communauté.html">Communauté</a></li>
@@ -50,34 +51,38 @@
         </div>
       </section>
       <!-- Ce qu'ils disent de nous  -->
-    <section class="comment-marche">
-        <div class="comment-marche_title">
+    <section class="communauté-disent">
+        <div class="communauté-disent_title">
             <h2>Ce qu'ils disent de nous</h2>
         </div>
 
-        <div class="comment">
-            <article class="tout-comment">
-                <div class="comment-text">
-                    <h5>Trouve une équipe</h5>
-                    <p>parcours des centaire de profils de</p>
-                    <p>joueurs et d'équipes qui cherchent des</p>
-                    <p>coéquipiers de ton niveu.</p>
+        <div class="disent">
+            <article class="tout-disent">
+                <div class="disent-text">
+                    <p>"J'ai trouvé mon équipe en moins de 24h !</p>
+                    <p>L'interface est super intuitive et la</p>
+                    <p>communauté est vraiment active."</p>
+                    <h4>ProGmer92</h4>
+                    <p>c joueur Valorant</p>
                 </div>
             </article>
-             <article class="tout-comment">
-                <div class="comment-text">
-                    <h5> publie ton profil</h5>
-                    <p>Crée ton profil de joueur avec tes stats,</p>
-                    <p>tes jeux favoris et ton niveau pour étre</p>
-                    <p>visible par les équipes.</p>
+             <article class="tout-disent">
+                <div class="disent-text">
+                    <p>"TeamUp.gg a complétement changé ma</p>
+                    <p>façon de jouer.fini les randoms toxiques,</p>
+                    <p>maintenant je joue avec une vraie équipe</p>
+                    <p>!"</p>
+                    <h4>LunaGaming</h4>
+                    <p>Joueuse CS2</p>
                 </div>
             </article>
-            <article class="tout-comment">
-                <div class="comment-text">
-                    <h5>  Rejoins la communauté</h5>
-                    <p>Connecte-toi avec des milliers de</p>
-                    <p>joueurs passionnés et participe à</p>
-                    <p>tournois communautaires.</p>
+            <article class="tout-disent">
+                <div class="disent-text">
+                    <p> "La meilleure platforme pour trouver des</p>
+                    <p>coéquipiers sérieux. on a mémé participé</p>
+                    <p> à notre premier tournoi ensemble !"</p>
+                    <h4>DarogonStlayer</h4>
+                    <p>Joueur LoL</p>
                 </div>
             </article>
         
