--- a/inscription.html
+++ b/inscription.html
@@ -17,9 +17,10 @@
         <ul class="nav-links">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="comment.html">Comment ça marche</a></li>
+          <li><a href="profiles.html">profils</a></li>
           <li><a href="joueurs.html">Joueurs</a></li>
           <li><a href="annonce.html">Annonce</a></li>
-          <li><a href="#">Communauté</a></li>
+          <li><a href="communauté.html">Communauté</a></li>
           <a href="connection.html"><button>Connexion</button></a>
         </ul>
       </nav>
