add modification on fille joueurs

--- a/joueurs.html
+++ b/joueurs.html
@@ -66,7 +66,7 @@
                 <p class="para-xfawzer">Main Clove/Omen, cherche équipe compétitive
                   <pre class="pre">    pour ranked push</pre>
                 </p>
-                <a href="profiles.html"></a><button>Voir le profil</button>
+                <a href="profiles.html"><button>Voir le profil</button></a>
               </div>
             </div>
 
@@ -81,7 +81,7 @@
                 <p class="para-phenix">Joueur mid expérimenté, disponible pour scrims
                   <pre class="pre">       et tournois</pre>
                 </p>
-                <button>Voir le profil</button>
+                <a href="profiles.html"><button>Voir le profil</button></a>
               </div>
             </div>
 
@@ -96,7 +96,7 @@
                 <p class="para-xfawzer">AWP main, 3000h de jeu, cherche équipe
                   <pre class="pre">      sérieuse</pre>
                 </p>
-                <button>Voir le profil</button>
+                <a href="profiles.html"><button>Voir le profil</button></a>
              </div>
            </div>
           </div>
@@ -112,7 +112,7 @@
                 <p class="para-xfawzer">Main Clove/Omen, cherche équipe compétitive
                   <pre class="pre">    pour ranked push</pre>
                 </p>
-                <button>Voir le profil</button>
+                <a href="profiles.html"><button>Voir le profil</button></a>
              </div>
             </div>
              <div class="partie_border">
@@ -126,7 +126,7 @@
                 <p class="para-phenix">Joueur mid expérimenté, disponible pour scrims
                   <pre class="pre">       et tournois</pre>
                 </p>
-                <button>Voir le profil</button>
+                <a href="joueurs.html"><button>Voir le profil</button></a>
                </div>
              </div>
            <div class="partie_border">
@@ -140,7 +140,7 @@
                 <p class="para-xfawzer">AWP main, 3000h de jeu, cherche équipe
                   <pre class="pre">      sérieuse</pre>
                 </p>
-                <button>Voir le profil</button>
+                <a href="profiles.html"><button>Voir le profil</button></a>
               </div>
            </div>
             
