--- a/annonce.html
+++ b/annonce.html
@@ -30,7 +30,7 @@
      <div class="annonce-content">
         <div>
         <h2 class="annonce-titele">Annonce De Recrutement</h2>
-        <img src="cover.png" class="image-annonce">
+        <img src="img/cover.png" class="image-annonce">
         </div>
        <form class="annonce-items">
         <div>
