--- a/profiles.html
+++ b/profiles.html
@@ -45,7 +45,7 @@
          </thead>
            <tbody>
             <tr>
-            <td><img src="OIP.jpeg"></td>
+            <td><img src="img/OIP.jpeg"></td>
             <td>XFAWZER</td>
             <td>31</td>
             <td>Diamond 2</td>
@@ -53,7 +53,7 @@
             <td>G2 Esports</td>
           </tr>
           <tr>
-            <td><img src="neonblade.jpg " height="50px"></td>
+            <td><img src="img/neonblade.jpg" height="50px"></td>
             <td>NeonBlade</td>
             <td>24</td>
             <td>Ascendant 3 </td>
@@ -61,7 +61,7 @@
             <td>Paper Rex</td>
           </tr>
           <tr>
-            <td><img src="IceQueen.jpeg"  height="50px"></td>
+            <td><img src="img/IceQueen.jpeg"  height="50px"></td>
             <td>IceQueen</td>
             <td>27</td>
             <td>Legendary Eagle</td>
@@ -69,7 +69,7 @@
             <td>PGL Major</td>
           </tr>
           <tr>
-            <td><img src="cyberninja.jpg"></td>
+            <td><img src="img/cyberninja.jpg"></td>
             <td>CyberNinja</td>
             <td>23</td>
             <td>Global Elite</td>
@@ -77,7 +77,7 @@
             <td>BLAST Premier</td>
           </tr>
           <tr>
-            <td><img src="yassir.jpg"></td>
+            <td><img src="img/yassir.jpg"></td>
             <td>X7YASSIR</td>
             <td>21</td>
             <td>Master</td>
@@ -85,7 +85,7 @@
             <td>JD Gaming</td>
           </tr>
           <tr>
-            <td><img src="women.jpg"></td>
+            <td><img src="img/women.jpg"></td>
             <td>PhoenixRising</td>
             <td>20</td>
             <td>Diamond</td>
