--- a/joueurs.html
+++ b/joueurs.html
@@ -57,7 +57,7 @@
           <div class="partie-one">
             <div class="partie_border">
                <div class="xFawzer">
-                <img src="gamer1.jpg">
+                <img src="img/gamer1.jpg">
                </div>
                <div> 
                 <h3>xFawzer</h3>
@@ -72,7 +72,7 @@
 
             <div class="partie_border">
                <div class="PhoenixRising">
-                <img src="yassir.jpg">
+                <img src="img/yassir.jpg">
               </div>
               <div>
                 <h3>X7YASSIR</h3>
@@ -87,7 +87,7 @@
 
            <div class="partie_border">
              <div class="IceQueen">
-                <img src="gamer2.jpg">
+                <img src="img/gamer2.jpg">
              </div>
              <div>
                 <h3>IceQueen</h3>
@@ -103,7 +103,7 @@
           <div class="partie-tow">
             <div class="partie_border">
              <div class="xFawzer">
-                <img src="gamer3.jpg">
+                <img src="img/gamer3.jpg">
              </div>
              <div> 
                 <h3>NeonBlade</h3>
@@ -117,7 +117,7 @@
             </div>
              <div class="partie_border">
                <div class="PhoenixRising">
-                 <img src="gamer4.png">
+                 <img src="img/gamer4.png">
                </div>
                <div>
                 <h3>PhoenixRising</h3>
@@ -131,7 +131,7 @@
              </div>
            <div class="partie_border">
               <div class="IceQueen">
-                <img src="gamer5.png">
+                <img src="img/gamer5.png">
               </div>
               <div>
                 <h3> CyberNinja</h3>
