--- a/annonce.html
+++ b/annonce.html
@@ -15,12 +15,12 @@
           <h3>TeamUp<span>.gg</span></h3>
         </div>
         <ul class="nav-links">
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="comment.html">Comment ça marche</a></li>
+           <li><a href="index.html">Accueil</a></li>
+          <li><a href="index.html">Comment ça marche</a></li>
           <li><a href="profiles.html">profils</a></li>
-          <li><a href="joueurs.html">Joueurs</a></li>
+          <li><a href="index.html">Joueurs</a></li>
           <li><a href="annonce.html">Annonce</a></li>
-          <li><a href="communauté.html">Communauté</a></li>
+          <li><a href="index.html">Communauté</a></li>
           <a href="connection.html"><button>Connexion</button></a>
         </ul>
       </nav>
