--- a/connection.html
+++ b/connection.html
@@ -16,11 +16,11 @@
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="comment.html">Comment ça marche</a></li>
+          <li><a href="index.html">Comment ça marche</a></li>
           <li><a href="profiles.html">profils</a></li>
-          <li><a href="joueurs.html">Joueurs</a></li>
+          <li><a href="index.html">Joueurs</a></li>
           <li><a href="annonce.html">Annonce</a></li>
-          <li><a href="communauté.html">Communauté</a></li>
+          <li><a href="index.html">Communauté</a></li>
           <a href="connection.html"><button>Connexion</button></a>
         </ul>
       </nav>
@@ -28,7 +28,7 @@
     <!-- connection -->
      <section class="connection">
         <div class="connection-titele">
-            <h2>Connection</h2>
+            <h2>Connexion</h2>
         </div>
         <form class="connection-items" >
             <label for="email">Email</label>
