add new profils

--- a/profiles.html
+++ b/profiles.html
@@ -94,6 +94,50 @@
             <td>League of Legends</td>
             <td>MAD Lions</td>
           </tr>
+          <tr>
+            <td><img src="img/IceQueen.jpeg"  height="50px"></td>
+            <td>IceQueen</td>
+            <td>27</td>
+            <td>Legendary Eagle</td>
+            <td>CS2</td>
+            <td>PGL Major</td>
+          </tr><tr>
+            <td><img src="img/Typical.webp"   ></td>
+            <td>TAPICAL</td>
+            <td>27</td>
+            <td>Legendary Eagle</td>
+            <td>CS2</td>
+            <td>PGL Major</td>
+          </tr><tr>
+            <td><img src="img/massa1-tm.png"  ></td>
+            <td>SANJI</td>
+            <td>27</td>
+            <td>Legendary Eagle</td>
+            <td>CS2</td>
+            <td>PGL Major</td>
+          </tr>
+          <tr>
+            <td><img src="img/yassir.jpg"></td>
+            <td>X7YASSIR</td>
+            <td>21</td>
+            <td>Master</td>
+            <td>League of Legends</td>
+            <td>JD Gaming</td>
+          </tr><tr>
+            <td><img src="img/shinigami.jpg"></td>
+            <td>BIGDAD</td>
+            <td>31</td>
+            <td>Master</td>
+            <td>League of Legends</td>
+            <td>JD Gaming</td>
+          </tr><tr>
+            <td><img src="img/nisqy.jpg"></td>
+            <td>XMARWAN</td>
+            <td>28</td>
+            <td>Master</td>
+            <td>League of Legends</td>
+            <td>JD Gaming</td>
+          </tr>
            </tbody>
           
         </table>
